RESOLVED FIXED34989
Cursor disappears on scroll bars that are over plugin content
https://bugs.webkit.org/show_bug.cgi?id=34989
Summary Cursor disappears on scroll bars that are over plugin content
Alexey Proskuryakov
Reported 2010-02-16 13:48:32 PST
We are overriding NSView mouseEntered/mouseExited methods to dispatch those, but they are not guaranteed to be called correctly when there are overlapping views, as is the case with WebViews and scrollers.
Attachments
proposed patch (7.89 KB, patch)
2010-02-16 13:49 PST, Alexey Proskuryakov
ggaren: review+
Alexey Proskuryakov
Comment 1 2010-02-16 13:49:16 PST
Created attachment 48824 [details] proposed patch
Alexey Proskuryakov
Comment 2 2010-02-16 13:49:44 PST
Geoffrey Garen
Comment 3 2010-02-16 14:06:07 PST
Comment on attachment 48824 [details] proposed patch > + // This is observable via different order of events - in Firefox, attribute event listeners fires first I would change this to "event listeners specified as HTML attributes fire first". You *could* make an "attribute event listener" in JavaScript, and then it would fire in the order your script added it. r=me
Geoffrey Garen
Comment 4 2010-02-16 14:07:57 PST
All of <x onevent="..."> and x.onEvent = function () {...} and x.setAttribute("onevent", ...) are considered attribute event listeners in our code.
Alexey Proskuryakov
Comment 5 2010-02-16 14:18:08 PST
Committed <http://trac.webkit.org/changeset/54829>. > I would change this to "event listeners specified as HTML attributes fire > first". Done.
Note You need to log in before you can comment on or make changes to this bug.